fix backend test config and UUID entity mappings